# csm-set

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RELEASING.md  SECURITY.md  conftest.py  docker-compose.private.yml  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/agents/: README.md  api-designer.md  bug-investigator.md  dependency-manager.md  documentation-specialist.md  git-commit-reviewer.md  performance-optimizer.md  python-architect.md  refactor-specialist.md  release-manager.md  security-reviewer.md  test-engineer.md
.claude/knowledge/: architecture.md  coding-standards.md  commands.md  project-skill.md  stack-decisions.md
.claude/memory/: anti-patterns.md  lessons-learned.md  recurring-bugs.md
.claude/playbooks/: bugfix-workflow.md  code-review.md  dependency-upgrade.md  feature-development.md  release-checklist.md
.claude/templates/: issue-template.md  pr-template.md  task-template.md
.github/workflows/: ci.yml  docker-publish.yml  docker-smoke.yml  infra-integration.yml
api/: __init__.py  deps.py  errors.py  jobs.py  logging.py  main.py  retry.py  security.py  static_files.py
api/routers/: __init__.py  backtest.py  data.py  history.py  jobs.py  (+5 more)
configs/: live-settings.yaml
docs/: README.md
examples/: 05_api_validation.py  backtest_example.py  feature_pipeline_example.py  fetch_universe_example.py  public_results_example.py  risk_metrics_example.py
notebooks/: 01_data_exploration.ipynb  01_data_exploration_executed.ipynb  02_signal_research.ipynb  03_backtest_analysis.ipynb  04_portfolio_optimization.ipynb  05_live_portfolio_rationale.ipynb
scripts/: _export_models.py  build_rationale_notebook.py  build_universe.py  export_results.py  fetch_history.py  refresh_daily.py
tests/: conftest.py
ui/: __init__.py  main.py
(+252 files in other folders)
