[project]
name = "csm-set"
version = "0.1.0"
description = "Cross-sectional momentum strategy system for the SET (Stock Exchange of Thailand)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "lumduan", email = "bad.sonsuk@gmail.com" }]
keywords = ["quantitative-finance", "momentum", "thai-stocks", "SET", "trading"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "tvkit>=0.11.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "nicegui>=2.4",
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=16",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "apscheduler>=3.10",
    "httpx>=0.27",
    "scipy>=1.17.1",
    "settfex>=0.1.0",
    "nbconvert>=7.17.1",
    "python-ulid>=3",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "ipykernel>=6",
]
research = [
    "scikit-learn>=1.5",
    "scipy>=1.13",
    "matplotlib>=3.9",
    "plotly>=5.22",
    "jupyterlab>=4",
    "nbconvert>=7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/csm"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
mypy_path = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.uv]
default-groups = ["dev"]
